--- a/main.html
+++ b/main.html
@@ -80,8 +80,57 @@
                 left: 50%;
                 margin: -125px 0 0 -125px;
             }
+
         </style>
 
+        <style>
+            table {
+                width: 100%;
+                border: none;
+                margin-bottom: 20px;
+                border-collapse: separate;
+            }
+            table thead th {
+                font-weight: bold;
+                text-align: left;
+                border: none;
+                padding: 10px 15px;
+                background: #EDEDED;
+                font-size: 14px;
+                border-top: 1px solid #ddd;
+            }
+            table tr th:first-child, .table tr td:first-child {
+                border-left: 1px solid #ddd;
+            }
+            table tr th:last-child, .table tr td:last-child {
+                border-right: 1px solid #ddd;
+            }
+            table thead tr th:first-child {
+                border-radius: 20px 0 0 0;
+            }
+            table thead tr th:last-child {
+                border-radius: 0 20px 0 0;
+            }
+            table tbody td {
+                text-align: left;
+                border: none;
+                padding: 10px 15px;
+                font-size: 14px;
+                vertical-align: top;
+            }
+            table tbody tr:nth-child(2n-1) {
+                background: #F8F8F8;
+            }
+            table tbody tr:last-child td{
+                border-bottom: 1px solid #ddd;
+            }
+            table tbody tr:last-child td:first-child {
+                border-radius: 0 0 0 20px;
+            }
+            table tbody tr:last-child td:last-child {
+                border-radius: 0 0 20px 0;
+            }
+        </style>
     </head>
     <body>
         <div id="app">
@@ -96,7 +145,7 @@
 
             var secret = ""
 
-            const SERVER = 'http://192.168.1.244:8089';
+            const SERVER = 'http://192.168.1.245:8089';
             this.socket = io(SERVER, {
                 path: '/ws/socket.io'
             });
@@ -121,6 +170,11 @@
                 }
             });
 
+            socket.on("topic_data", data => {
+                console.log(""+data['topic']+" "+data["msg"]);
+                item = document.getElementById(data['topic']).innerText = data["msg"];
+            });
+
             socket.on("timer", data => {
               console.log(data['secret']);
               console.log(secret);
@@ -131,7 +185,7 @@
                       secret: secret
                   });
                   this.socket.close();
-                  window.location.href = "http://localhost:8089/main"
+                  window.location.href = "http://192.168.1.245:8089/main"
               }
             });
 
@@ -174,9 +228,7 @@
                     return {
                         msg: 'IoT Case Stand',
                         color: {
-                            hue: 30,
-                            saturation: 100,
-                            luminosity: 50,
+                            hue: 30
                         },
                     };
                 },
@@ -189,7 +241,7 @@
                                 socket.emit("change_color", hslToHex(this.color.hue, 100, 50));
                                 hh = this.color.hue;
                             }
-                        }, 1000);
+                        }, 100);
                     },
                     OnSelect (hue) {
                         alert('Мы все умрём')
@@ -203,5 +255,14 @@
             <button class="valve" onclick="socket.emit('button','MOD1_IN1')">Кран</button>
             <button class="valve" onclick="socket.emit('button','MOD1_IN2')">Вентилятор</button>
             <button class="valve" onclick="socket.emit('button','MOD1_IN3')">Контактор</button>
+
+            <table>
+               <tr><td>Температура</td><td id="/devices/wb-msw-v3_21/controls/Temperature"></td></tr>
+               <tr><td>Влажность</td><td id="/devices/wb-msw-v3_21/controls/Humidity"></td></tr>
+               <tr><td>Датчик CO2</td><td id="/devices/wb-msw-v3_21/controls/CO2"></td></tr>
+               <tr><td>Датчик движения</td><td id="/devices/wb-msw-v3_21/controls/Current Motion"></td></tr>
+               <tr><td>Датчик шума</td><td id="/devices/wb-msw-v3_21/controls/Sound Level"></td></tr>
+               <tr><td>Датчик освещённости</td><td id="/devices/wb-msw-v3_21/controls/Illuminance"></td></tr>
+            </table>
     </body>
 </html>
