Now it's on https://iot-dod-2021.rtuitlab.dev

--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
     <script src="https://unpkg.com/@radial-color-picker/vue-color-picker/dist/vue-color-picker.umd.min.js"></script>
     <link rel="stylesheet"
           href="https://unpkg.com/@radial-color-picker/vue-color-picker/dist/vue-color-picker.min.css"/>
-    <link href="styles.css" rel="stylesheet">
-    <script src="/node_modules/socket.io/client-dist/socket.io.js"></script>
-    <script type="text/javascript" src="/scripts/initColorPicker.js"></script>
+    <link href="/case/styles/styles.css" rel="stylesheet">
+    <script src="/case/node_modules/socket.io/client-dist/socket.io.js"></script>
+    <script type="text/javascript" src="/case/scripts/initColorPicker.js"></script>
 </head>
 <body>
 <div id="app">
