--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
         </div>
         <div class="colorPickerParent">
             <div class="colorPicker">
-                <color-picker v-bind="color" @input="onInput"></color-picker>
+                <color-picker v-bind="color" @input="onInput" @setup="setup"></color-picker>
             </div>
             <div class="colorPickerParentBackground">
                 <div></div>
