--- a/qr_expired.html
+++ b/qr_expired.html
@@ -9,7 +9,7 @@
     <section>
         <h1>Время вышло :(</h1>
         <p>
-            Чтобы получить доступ к кейсу, попросите новый QR код.
+            В рамках выставки время управления кейсом ограничено. Для получения доступа отсканируйте QR код снова.
         </p>
     </section>
 </main>
