--- a/refresh.html
+++ b/refresh.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>QR код закончился</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link href="/case/1/styles/styles.css" rel="stylesheet">
 </head>
 <body>
-    Ваша сессия истекла
+<main>
+    <section>
+        <h1>Время вышло :(</h1>
+        <p>
+            В рамках выставки время управления кейсом ограничено. Для получения доступа отсканируйте QR код снова.
+        </p>
+    </section>
+</main>
 </body>
 </html>
